// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Component render 1`] = `
<div
  className="wrapper"
>
  <input
    className="checkbox"
    disabled={undefined}
    id="checkbox-1"
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="checkbox-1"
    onClick={undefined}
  />
</div>
`;

exports[`Checkbox Component render 2`] = `
<div
  checked={true}
  className="wrapper"
>
  <input
    className="checkbox"
    disabled={undefined}
    id="checkbox-1"
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="checkbox-1"
    onClick={undefined}
  />
</div>
`;

exports[`Checkbox Component render disabled 1`] = `
<div
  className="wrapper wrapperDisabled"
>
  <input
    className="checkbox"
    disabled={true}
    id="checkbox-2"
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="checkbox-2"
    onClick={undefined}
  />
</div>
`;

exports[`Checkbox Component render error 1`] = `
<div
  className="wrapper wrapperError"
>
  <input
    className="checkbox"
    disabled={undefined}
    id="checkbox-3"
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="checkbox-3"
    onClick={undefined}
  />
</div>
`;
